# build-engine-editor

./: README.md  content.py  graphicsscene.py  main.py  ogl.py  ogl2.py  opengl.py  pyproject.toml  updateflag.py
assets/icons/: arrow-135-small.pdn  edge--plus.pdn  funnel.pdn  node--plus.pdn
editor/: actions.py  cleanupgeometrydialog.py  clipboard.py  commands.py  constants.py  content.py  document.py  editorpropertygrid.py  graph.py  graphicsitems.py  graphicsscene.py  graphicsscenetools.py  graphicsview.py  main.py  mapdocument.py  mapio.py  maths.py  meshops.py  preferencesdialog.py  readwrite.py  settings.py  texture.py  texturepicker.py  updateflag.py  utils.py  viewport.py
editor/adaptors/: base.py  build.py  doom.py  manager.py  marathon.py
editor/importers/: base.py  doom.py  duke3d.py  manager.py  marathon.py
editor/mapio/: build.py  doom.py  fallenaces.py  gexf.py  marathon.py
editor/mapio/tests/: test_build.py  test_gexf.py
editor/mapio/tests/data/: 1_squares.map  2_squares.map
editor/tests/: test_clipboard.py  test_commands.py  test_content.py  test_graph.py  test_mapio.py  test_utils.py  testcasebase.py
editor/tests/data/: 1_squares.json  3_squares.map  4_squares.map
