[tool.poetry]
name = "build-engine-editor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
pyside6 = "6.6.3.1"
pyqtdarktheme = "^2.1.0"
marshmallow = "^4.0.0"
marshmallow-dataclass = "^8.7.1"
networkx = "3.3"
shapely = "^2.1.1"
numpy = "<2"
pyopengl = "^3.1.9"
parameterized = "^0.9.0"
omgifol = "^0.5.1"
pillow = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
